# currentflow

./: .gitignore  CLAUDE.md  DATA_SOURCES.md  LOCKED_SPEC.md  PATTERN-CATALOG-SPEC.md  PLAN.md  PROGRESS.md  README.md  REGIME.md  pyproject.toml  run.sh  screeners.md
.streamlit/: config.toml
currentflow/: __init__.py  config.py  logging_setup.py
currentflow/dal/: __init__.py  auth.py  (+11 more)
deploy/: com.currentflow.scheduler.plist
design/: HANDOFF_v2.md  IDX Flow Terminal v2.dc.html  IDX Flow Terminal.dc.html  IDX-Flow-Terminal.dc.html  Login Session Gate.dc.html  README-login-session-gate.md  README.md  SCREENS_INDEX.md  SCREENS_terminal.md  STYLE_GUIDE.md
diagrams/: screening-flow.html  stock-pick-selection-flow.html
screener/: CONSOLIDATED_SCREENER_SPEC.md
source-drafts/: CONSOLIDATED_THESIS.md
tests/: builders.py  conftest.py  test_accum_chart.py  test_accumulation.py  test_app_pipeline.py  test_backfill.py  test_bands.py  test_bootstrap.py  test_broker_flow.py  test_catalog_view.py  test_charts.py  test_client.py  test_dal_auth.py  test_dal_netlog.py  test_dal_transport.py  test_distribution.py  test_engine.py  test_execution_pipeline.py  test_fast_mode.py  test_fill.py  test_foreign_flow.py  test_heatmap.py  test_ingest_cli.py  test_integrity.py  test_login_bearer.py  test_lookahead.py  test_metrics.py  test_ml.py  test_order.py  test_parse.py  test_parse_slice2.py  test_parse_slice3.py  test_pattern_catalog.py  test_pattern_scheduler.py  test_phase.py  test_pipeline.py  test_pipeline_view.py  test_pit.py  test_portfolio_runner.py  test_presentation.py  (+31 more)
(+95 files in other folders)
